[tool.poetry]
name = "build an operating system"
version = "0.1.0"
description = ""
authors = ["Emmanuel Palacio Gaviria"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.6.1"
pre-commit = "^3.4.0"
bandit = "^1.7.5"
pylint = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
